# tmmail

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: static-code-analysis.yaml
requirements/: typing.txt
src/tmmail/: __init__.py  account.py  authentication.py  domain.py  messages.py
src/tmmail/api_entities/: account.py  domain.py  errors.py  message.py  parent_entity.py
src/tmmail/exceptions/: account.py  auth.py  exceptions.py  message.py
src/tmmail/util/: api_request.py
