[tool.poetry]
name = "tmmail"
version = "0.1.0"
description = "A package that facilitates interaction with the Temp Mail API"
authors = ["Piotr Ginał"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {extras = ["email"], version = "^2.7.1"}
requests = "^2.31.0"
types-requests = "^2.32.0.20240602"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
