[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tmmail"
version = "0.1.0"
description = "A package that facilitates interaction with the Temp Mail API"
authors = [
    {name = "Piotr Ginał"}
]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

[tool.setuptools]
packages = ["find:"]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.dynamic]
requires = {file = "requirements/base.txt"}

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    # Documentation will be added in the future; currently ignoring warnings related to missing documentation
    "D100",
    "D101",
    "D103",
    "D104",
    "D107",

    "N818",

    "S105",  # because of false positive in tmmail/__init__.py - token endpoint flagged

    "D213",  # ignore rules causing conflicts
    "D211",
]
